SQLUpdateTest, SQLSelectTest, SQLSelectProjectionsTest, SQLInsertTest, SQLCommandsTest, GraphDatabaseTest fix